int_test_fix.txt
node.exe : FAIL tests/integration/full_organization_flow.test.ts
At line:1 char:1
+ & "C:\Program Files\nodejs/node.exe" "C:\Program 
Files\nodejs/node_mo ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~
    + CategoryInfo          : NotSpecified: (FAIL tests/inte... 
   on_flow.test.ts:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
   Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your 
code or its dependencies use non-standard JavaScript syntax, or 
when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to 
transform your files into valid JS based on your Babel 
configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
      If you are trying to use ECMAScript Modules, see 
https://jestjs.io/docs/ecmascript-modules for how to enable it.
      If you are trying to use TypeScript, see 
https://jestjs.io/docs/getting-started#using-typescript
      To have some of your "node_modules" files transformed, 
you can specify a custom "transformIgnorePatterns" in your 
config.
      If you need a custom transformation specify a 
"transform" option in your config.
      If you simply want to mock your non-JS modules (e.g. 
binary assets) you can stub them out with the 
"moduleNameMapper" config option.

    You'll find more details and examples of these config 
options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    C:\Users\NewAdmin\Desktop\File-Organizer-MCP\tests\integrati
on\full_organization_flow.test.ts:1
    ({"Object.<anonymous>":function(module,exports,require,__dir
name,__filename,jest){import fs from 'fs/promises';
                                                                
                      ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      at Runtime.createScriptFromCode 
(node_modules/jest-runtime/build/index.js:1505:14)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        0.808 s
Ran all test suites matching 
/tests\\integration\\full_organization_flow.test.ts/i.
